# trix

./: README.md  matmul_disassem.md  pallas.py  partial_matmul.py  pyproject.toml
pallas/: block_sparse.py  comm_patterns.py  dsa.py  masochist_roll.py  matmul.py  reduce_scatter.py  ref_reduce_scatter.py  weird_allgather_mm.py
scripts/: fsdp.py
